--- a/style.css
+++ b/style.css
@@ -72,7 +72,9 @@ p{
     height: 50px;
     font-size: 16px;
     border-radius: 5px;
-    border: none; 
+    border: none;
+    background: whitesmoke;
+    color: hsl(229, 31%, 21%);;
     justify-content: space-between; 
     cursor: pointer; 
 }
@@ -246,7 +248,7 @@ details summary{
 }
 details summary::after{
     content: '';
-    color: blue;
+    color: red;
     position: absolute;
     font-size: 18px;
     line-height: 0;
@@ -346,6 +348,7 @@ footer{
     display: flex;
     gap: 40px;
 }
+
 @media screen and (max-width: 375px) {
     nav, main{
         width: 100%;
@@ -364,7 +367,6 @@ footer{
         flex-direction: column;
     }
     .container::before{
-        right: 0;
         width: 267px;
         height: 186px;
         border-bottom-left-radius: 40%;
@@ -374,9 +376,19 @@ footer{
         width: fit-content;
         margin: auto;
         order: 2;
-        
     }
-    .image img{
+    .content h1{
+        font-size: 30px;
+        text-align: center;
+    }
+    .content p{
+        text-align: center;
+    }
+    .btns button{
+        margin-left: 25px;
+    }
+    
+    .image img, .image1 img{
         height: 204px;
         width: 307px;
     }
@@ -384,8 +396,11 @@ footer{
         margin: auto;
         order: 1;
     }
+    .click img{
+        margin-left: 30px;
+    }
     .btns button{
-        width: 70px;
+        width: 150px;
         height: 50px;
     }
     .features{
@@ -396,27 +411,77 @@ footer{
        }
        
        .features li{
-         margin: auto;
-       }
-    .features ul{
+        margin: auto;
+      }
+      .features ul{
         flex-direction: column;
+    }
+    .content2::before{
+        display: none;
+    }
+    .content2 h2{
+        margin: 0 60px;
+        font-size: 20px;
+    }
+    .content2 p{
+        text-align: center;
+        margin-right: 70px;
+    }
+    .btn1 button{
+        display: none;
+    }
+    .click::before{
+        content:'';
+        background-color: hsl(231, 69%, 60%);
+        left: 0;
+        position: absolute;
+        width: 267px;
+        height: 186px;
+        border-bottom-right-radius: 40%;
+        top: 96px;
+        z-index: -1;
     }
     .click{
         flex-direction: column;
     }
+    .download{
+        margin:0% ;
+        padding-top: 160px;
+        
+    }
+    .download p{
+        margin: 0%;
+    }
     .browser{
         flex-direction: column;
     }
-    details summary {
-        flex-direction: column;
-        width: fit-content;
+    .questions p{
+        margin: 0%;
+        padding-bottom: 80px;
     }
+    details summary {
+        width: 300px;
+    }
+    section{
+        width: 375px;
+    }
+    .section{
+        text-align: left;
+        align-items: flex-start;
+    }
+    
     footer{
         flex-direction: column;
+        height: 330px;
+        width: 100%;
     }
+    
     .footer ul{
         flex-direction: column;
+        margin-top: 80px;
+        margin-right: 100px;
     }
+    
     .overlay{
         width: 100%;
         height: 100%;
