--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
 body{
     background-color: white;
     font-family: 'Rubik', sans-serif;
-    
+    padding: 0;
+    margin: 0;
 }
 
 nav{
@@ -277,77 +278,48 @@ details p{
 
 
 section{
-background:hsl(231, 69%, 60%);
-    height: 360px;
-    margin-top: 150px;
-}
-.section {
-    padding-top: 70px;
+    background:hsl(231, 69%, 60%);
+    margin-top: 100px;
     text-align: center;
-color: white;
+    padding: 50px 0;
+    color: white;
 }
-.section p {
-color: white;
-font-size: 12px;
-font-weight: 300;
-word-spacing: 5px;
-letter-spacing: 5px;
-padding-bottom: 15px;
+section p{
+    color: white;
+    letter-spacing: 5px;
 }
-.section h1{
-    font-size: 30px;
-    font-weight: 200;
-    margin: 0 513px;
-    word-spacing: 5px;
-    padding-bottom: 40px;
-}
-.input{
-    display: flex;
-    margin: 15px 400px;
-    align-items: center;
-    gap: 15px;
-    
-    
-}
-input{
-    width: 300px;
+.input input{
     height: 40px;
+    padding: 5px;
+    width: 300px;
+    margin-right: 15px;
     border-radius: 5px;
     border: none;
-    margin-left: 70px;
 }
-.btn2 button{
-    width: 125px;
-    height: 40px;
+.input button {
     background: hsl(0, 94%, 66%);
-    margin-bottom: 15px;
+    width: 125px;
 }
+
 footer{
-    background: hsl(229, 31%, 21%);
-    display: flex;
-    height: 80px;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 168px;
+   background: hsl(229, 31%, 21%);
+   padding: 10px 158px;
+   display: flex;
+   color: white;
+   justify-content: space-between;
+   align-items: center;
 }
-.footer {
-    display:  flex;
+.footer{ 
+    display: flex;
     align-items: center;
     gap: 60px;
 }
-
-
-.footer ul {
-    display: flex;
-    list-style: none;
-    gap: 50px;
-    color: white;
+.footer ul li{
+    display: inline-block;
+    margin-right: 50px;
 }
 
-.footer-container{
-    display: flex;
-    gap: 40px;
-}
+
 
 @media screen and (max-width: 375px) {
     nav, main{
@@ -470,17 +442,11 @@ footer{
         align-items: flex-start;
     }
     
-    footer{
-        flex-direction: column;
-        height: 330px;
-        width: 100%;
-    }
-    
-    .footer ul{
-        flex-direction: column;
-        margin-top: 80px;
-        margin-right: 100px;
-    }
+  footer, .footer{
+    margin:0;
+    padding:0;
+    height: fit-content;
+  }
     
     .overlay{
         width: 100%;
