--- a/style.css
+++ b/style.css
@@ -26,6 +26,10 @@ nav li{
     display: flex;
     align-items: center;
 }
+nav li:hover{
+    text-decoration: underline;
+    color: hsl(0, 94%, 66%);
+}
 
 li button{
     background-color: hsl(0, 94%, 66%);
@@ -314,9 +318,17 @@ footer{
     align-items: center;
     gap: 60px;
 }
-.footer ul li{
-    display: inline-block;
+.footer ul {
+    list-style: none;
+    display: flex;
     margin-right: 50px;
+}
+.footer li{
+    padding: 0 20px;
+}
+.footer-container{
+    display: flex;
+    gap: 50px;
 }
 
 
@@ -438,16 +450,26 @@ footer{
         width: 375px;
     }
     .section{
-        text-align: left;
-        align-items: flex-start;
+        text-align: center;
+        align-items: center;
     }
+    .input button{
+        width: 300px;
+    } 
     
   footer, .footer{
     margin:0;
-    padding:0;
+    padding: 30px 0;
     height: fit-content;
+    flex-direction: column;
   }
-    
+  .footer ul{
+      flex-direction: column;
+  }
+  .footer li{
+       padding: 10px 0;
+       text-align: center;
+  }
     .overlay{
         width: 100%;
         height: 100%;
