--- a/style.css
+++ b/style.css
@@ -456,6 +456,14 @@ footer{
     .input button{
         width: 300px;
     } 
+    .input{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .input input{
+        margin: 0;
+    }
     
   footer, .footer{
     margin:0;
