--- a/style.css
+++ b/style.css
@@ -1,37 +1,39 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-body{
+body {
     background-color: white;
     font-family: 'Rubik', sans-serif;
     padding: 0;
     margin: 0;
 }
 
-nav{
+nav {
     display: flex;
     justify-content: space-between;
     margin: 50px 160px;
     align-items: center;
-    
+
 }
 
-nav li{
+nav li {
     margin-right: 50px;
     list-style: none;
     font-size: 14px;
     font-weight: 300;
     color: hsl(229, 8%, 60%);
 }
-.list ul{
+
+.list ul {
     display: flex;
     align-items: center;
 }
-nav li:hover{
+
+nav li:hover {
     text-decoration: underline;
     color: hsl(0, 94%, 66%);
 }
 
-li button{
+li button {
     background-color: hsl(0, 94%, 66%);
     color: white;
     width: 105px;
@@ -39,118 +41,137 @@ li button{
     border-radius: 5px;
     border: none;
     cursor: pointer;
-    
-    
+
+
 }
 
-.container{
+.mobile-nav {
+    visibility: hidden;
+}
+
+.container {
     display: flex;
     justify-content: space-between;
     position: relative;
 }
 
-.content{
+.content {
     width: 480px;
     margin-left: 160px;
     bottom: 0;
     background-color: white;
     height: fit-content;
-    margin-top: 90px;   
+    margin-top: 90px;
 }
-.content h1{
+
+.content h1 {
     font-size: 40px;
 }
-p{
+
+p {
     font-size: 18px;
-    color:hsl(229, 8%, 60%);
+    color: hsl(229, 8%, 60%);
     font-weight: 200;
 }
-.image{
+
+.image {
     margin-right: 90px;
 }
-.image img{
+
+.image img {
     height: 466px;
     width: 657px;
 }
-.btns button{
+
+.btns button {
     width: 170px;
     height: 50px;
     font-size: 16px;
     border-radius: 5px;
     border: none;
     background: whitesmoke;
-    color: hsl(229, 31%, 21%);;
-    justify-content: space-between; 
-    cursor: pointer; 
+    color: hsl(229, 31%, 21%);
+    ;
+    justify-content: space-between;
+    cursor: pointer;
 }
+
 .btns button:nth-child(1) {
     background: hsl(231, 69%, 60%);
-    color: white; 
-  }
-.container::before{
+    color: white;
+}
+
+.container::before {
     content: '';
-    position: absolute; 
+    position: absolute;
     height: 350px;
     width: 570px;
     background: hsl(231, 69%, 60%);
-    z-index: -1 ;
+    z-index: -1;
     right: 0;
     top: 135px;
     border-bottom-left-radius: 200px;
 }
-  
-.features{
-margin: 0 430px;  
-text-align: center;
-width: 530px; 
-height: 260px;
-font-weight: 100;
-font-size: 18px;
+
+.features {
+    margin: 0 430px;
+    text-align: center;
+    width: 530px;
+    height: 260px;
+    font-weight: 100;
+    font-size: 18px;
 }
-.features ul{
-display: flex;
-align-items: center;
+
+.features ul {
+    display: flex;
+    align-items: center;
 }
-.features li{
-margin-right: 50px;
-list-style: none;
-font-size: 14px;
-font-weight: 300;
-opacity: 0.8;
+
+.features li {
+    margin-right: 50px;
+    list-style: none;
+    font-size: 14px;
+    font-weight: 300;
+    opacity: 0.8;
 }
-  
-.click{
+
+.click {
     display: flex;
     justify-content: space-between;
     position: relative;
 }
-.click img{
-margin-left: 100px;
+
+.click img {
+    margin-left: 100px;
 }
-.content2{
-width: 430px;
-margin-right: 160px;
-bottom: 0;
-font-size: 18px;
-margin-top: 70px;
-font-weight: 100;
+
+.content2 {
+    width: 430px;
+    margin-right: 160px;
+    bottom: 0;
+    font-size: 18px;
+    margin-top: 70px;
+    font-weight: 100;
 
 }
-.content2 h2{
+
+.content2 h2 {
     font-size: 30px;
 }
-.content2::before{
-content :'';
-position: absolute; 
-height: 350px;
-width: 600px;
-background: hsl(231, 69%, 60%);
-z-index: -1;
-left: 0;
-top: 135px;
-border-bottom-right-radius: 200px;
+
+.content2::before {
+    content: '';
+    position: absolute;
+    height: 350px;
+    width: 600px;
+    background: hsl(231, 69%, 60%);
+    z-index: -1;
+    left: 0;
+    top: 135px;
+    border-bottom-right-radius: 200px;
 }
-.btn1 button{
+
+.btn1 button {
     width: 110px;
     height: 50px;
     color: white;
@@ -161,35 +182,41 @@ border-bottom-right-radius: 200px;
     margin-top: 40px;
     cursor: pointer;
 }
-.download{
+
+.download {
     margin: 0 160px;
     text-align: center;
     margin-top: 170px;
 }
-.download p{
+
+.download p {
     margin: 0 280px;
 }
-.browser{
+
+.browser {
     display: flex;
     text-align: center;
     gap: 15px;
     width: fit-content;
-    margin: 50px  auto;
+    margin: 50px auto;
 }
-.shape{
+
+.shape {
     background: white;
     width: 280px;
     height: 370px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     margin-right: 30px;
     border-radius: 10px;
-    border: navajowhite; 
+    border: navajowhite;
 }
-img{
+
+img {
     margin-top: 50px;
     margin-bottom: 20px;
 }
-button{
+
+button {
     margin-top: 20px;
     width: 230px;
     height: 50px;
@@ -199,43 +226,52 @@ button{
     color: white;
     cursor: pointer;
 }
-.dotted{
+
+.dotted {
     border-top: 3px dotted #bbb;
     opacity: o.3;
     margin-top: 20px;
 }
-.firefox{
+
+.firefox {
     margin-top: 40px;
 }
-.opera{
+
+.opera {
     margin-top: 80px;
 }
-.questions{
+
+.questions {
     margin-top: 170px;
     text-align: center;
 }
-.questions p{
-    margin-left:  450px;
+
+.questions p {
+    margin-left: 450px;
     margin-right: 450px;
     margin-bottom: 60px;
     font-size: 18px;
 }
-details [open] summary ~ *
-{
+
+details [open] summary~* {
     animation: open 0.3s ease-in-out;
 }
+
 @keyframes open {
     0% {
         opacity: 0;
     }
-    100%{
+
+    100% {
         opacity: 1;
     }
 }
-details summary::-webkit-detail   -marker {
+
+details summary::-webkit-detail -marker {
     display: none;
 }
-details summary{
+
+details summary {
     width: 540px;
     padding: 5px 0;
     border-top: 1px solid hsl(229, 8%, 60%);
@@ -244,14 +280,15 @@ details summary{
     font-size: 18px;
     font-weight: 400;
     list-style: none;
-    
+
     display: flex;
     justify-content: space-between;
     text-align: left;
     align-items: center;
     margin: auto;
 }
-details summary::after{
+
+details summary::after {
     content: '';
     color: red;
     position: absolute;
@@ -263,36 +300,42 @@ details summary::after{
     transform-origin: center;
     transition: 200mslinear;
 }
-details[open] summary::after{
+
+details[open] summary::after {
     transform: rotate(45deg);
     font-size: 2rem;
 }
-details summary{
+
+details summary {
     outline: 0;
 }
-details p{
+
+details p {
     font-size: 0.95rem;
     margin: 0 01rem;
     padding-top: 1rem;
 }
-.btn button{
+
+.btn button {
     width: 115px;
     margin-top: 50px;
 }
 
 
-section{
-    background:hsl(231, 69%, 60%);
+section {
+    background: hsl(231, 69%, 60%);
     margin-top: 100px;
     text-align: center;
     padding: 50px 0;
     color: white;
 }
-section p{
+
+section p {
     color: white;
     letter-spacing: 5px;
 }
-.input input{
+
+.input input {
     height: 40px;
     padding: 5px;
     width: 300px;
@@ -300,33 +343,38 @@ section p{
     border-radius: 5px;
     border: none;
 }
+
 .input button {
     background: hsl(0, 94%, 66%);
     width: 125px;
 }
 
-footer{
-   background: hsl(229, 31%, 21%);
-   padding: 10px 158px;
-   display: flex;
-   color: white;
-   justify-content: space-between;
-   align-items: center;
+footer {
+    background: hsl(229, 31%, 21%);
+    padding: 10px 158px;
+    display: flex;
+    color: white;
+    justify-content: space-between;
+    align-items: center;
 }
-.footer{ 
+
+.footer {
     display: flex;
     align-items: center;
     gap: 60px;
 }
+
 .footer ul {
     list-style: none;
     display: flex;
     margin-right: 50px;
 }
-.footer li{
+
+.footer li {
     padding: 0 20px;
 }
-.footer-container{
+
+.footer-container {
     display: flex;
     gap: 50px;
 }
@@ -334,88 +382,112 @@ footer{
 
 
 @media screen and (max-width: 375px) {
-    nav, main{
+
+    nav,
+    main {
         width: 100%;
     }
-    nav{
+
+    nav {
         margin: 0;
         padding: 0;
         display: flex;
         align-items: center;
     }
+
     .list ul {
         display: none;
     }
-    
-    .container{
+
+    .mobile-nav {
+        visibility: visible;
+    }
+
+    .container {
         flex-direction: column;
     }
-    .container::before{
+
+    .container::before {
         width: 267px;
         height: 186px;
         border-bottom-left-radius: 40%;
         top: 96px;
     }
-    .content{
+
+    .content {
         width: fit-content;
         margin: auto;
         order: 2;
     }
-    .content h1{
+
+    .content h1 {
         font-size: 30px;
         text-align: center;
     }
-    .content p{
+
+    .content p {
         text-align: center;
     }
-    .btns button{
+
+    .btns button {
         margin-left: 25px;
     }
-    
-    .image img, .image1 img{
+
+    .image img,
+    .image1 img {
         height: 204px;
         width: 307px;
     }
-    .image{
+
+    .image {
         margin: auto;
         order: 1;
     }
-    .click img{
+
+    .click img {
         margin-left: 30px;
     }
-    .btns button{
+
+    .btns button {
         width: 150px;
         height: 50px;
     }
-    .features{
-        margin: auto;  
-        text-align: center;
-        width: fit-content; 
-        height: 260px;
-       }
-       
-       .features li{
+
+    .features {
         margin: auto;
-      }
-      .features ul{
+        text-align: center;
+        width: fit-content;
+        height: 260px;
+    }
+
+    .features li {
+        margin: auto;
+    }
+
+    .features ul {
         flex-direction: column;
     }
-    .content2::before{
+
+    .content2::before {
         display: none;
     }
-    .content2 h2{
+
+    .content2 h2 {
         margin: 0 60px;
         font-size: 20px;
     }
-    .content2 p{
+
+    .content2 p {
         text-align: center;
         margin-right: 70px;
     }
-    .btn1 button{
+
+    .btn1 button {
         display: none;
     }
-    .click::before{
-        content:'';
+
+    .click::before {
+        content: '';
         background-color: hsl(231, 69%, 60%);
         left: 0;
         position: absolute;
@@ -425,60 +497,75 @@ footer{
         top: 96px;
         z-index: -1;
     }
-    .click{
+
+    .click {
         flex-direction: column;
     }
-    .download{
-        margin:0% ;
+
+    .download {
+        margin: 0%;
         padding-top: 160px;
-        
+
     }
-    .download p{
+
+    .download p {
         margin: 0%;
     }
-    .browser{
+
+    .browser {
         flex-direction: column;
     }
-    .questions p{
+
+    .questions p {
         margin: 0%;
         padding-bottom: 80px;
     }
+
     details summary {
         width: 300px;
     }
-    section{
+
+    section {
         width: 375px;
     }
-    .section{
+
+    .section {
         text-align: center;
         align-items: center;
     }
-    .input button{
+
+    .input button {
         width: 300px;
-    } 
-    .input{
+    }
+
+    .input {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
-    .input input{
+
+    .input input {
         margin: 0;
     }
-    
-  footer, .footer{
-    margin:0;
-    padding: 30px 0;
-    height: fit-content;
-    flex-direction: column;
-  }
-  .footer ul{
-      flex-direction: column;
-  }
-  .footer li{
-       padding: 10px 0;
-       text-align: center;
-  }
-    .overlay{
+
+    footer,
+    .footer {
+        margin: 0;
+        padding: 30px 0;
+        height: fit-content;
+        flex-direction: column;
+    }
+
+    .footer ul {
+        flex-direction: column;
+    }
+
+    .footer li {
+        padding: 10px 0;
+        text-align: center;
+    }
+
+    .overlay {
         width: 100%;
         height: 100%;
         opacity: 0;
@@ -486,64 +573,38 @@ footer{
         transition: opacity .35s, visibiliy .35s, height .35s;
         overflow: hidden;
         background: hsl(229, 31%, 21%);
-        
+
     }
-    #hamburger-menu{
-        position: relative;
-        /* top: 20px;
-        left: 20px; */
-        width: 25px;
-        height: 25px;
-        display: block;
+
+    .hamburger {
+        z-index: 100;
+        top: 1px;
+        right: 1px;
+        padding: 4px;
         border: none;
-        padding: 0;
-        margin: 20px;
-        background: linear-gradient(
-            to bottom,
-            #3D0E61, #3D0E61 20%,
-            white 20%, white 40%,
-            #3D0E61 40%, #3D0E61 60%,
-            white 60%, white 80%,
-            #3D0E61 80%, #3D0E61 100%
-        );
+        background: white;
+        cursor: pointer;
     }
-    #hamburger-menu #sidebar-menu {
-             visibility: hidden;
-             position: fixed;
-             top: 0;
-             left: -250px;
-             width: 200px;
-             height: 100%;
-             background-color: #3D0E61;
-             transition: 0.3s;
-             padding: 0 10px;
-             box-sizing: border-box;
-    }
-    #hamburger-input{
-        display: none;
-    }
-    #hamburger-input:checked + #hamburger-menu #sidebar-menu {
-        visibility: visible;
-        left: 0;
-    }
-    #hamburger-input:checked~
-    .overlay{
-        visibility: visible;
-        opacity: 0.4;
-    }
+
+    
 }
 
+/* <div class="mobile-nav">
+<ul class="menu">
+    <li class="menuItem">FEATURES</li>
+    <li class="menuItem">PRICING</li>
+    <li class="menuItem">CONTACT</li>
+    <li class="menuItem"><button>LOGIN</button></li>
+</ul>
 
-  
-  
-
-
-  
-  
-  
-  
-  
-  
-  
-      
-  
+<div class="footer-container">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+        <path fill="#FFF" fill-rule="evenodd"
+            d="M22.675 0H1.325C.593 0 0 .593 0 1.325v21.351C0 23.407.593 24 1.325 24H12.82v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116c.73 0 1.323-.593 1.323-1.325V1.325C24 .593 23.407 0 22.675 0z" />
+    </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="20">
+        <path fill="#FFF" fill-rule="evenodd"
+            d="M24 2.557a9.83 9.83 0 0 1-2.828.775A4.932 4.932 0 0 0 23.337.608a9.864 9.864 0 0 1-3.127 1.195A4.916 4.916 0 0 0 16.616.248c-3.179 0-5.515 2.966-4.797 6.045A13.978 13.978 0 0 1 1.671 1.149a4.93 4.93 0 0 0 1.523 6.574 4.903 4.903 0 0 1-2.229-.616c-.054 2.281 1.581 4.415 3.949 4.89a4.935 4.935 0 0 1-2.224.084 4.928 4.928 0 0 0 4.6 3.419A9.9 9.9 0 0 1 0 17.54a13.94 13.94 0 0 0 7.548 2.212c9.142 0 14.307-7.721 13.995-14.646A10.025 10.025 0 0 0 24 2.557z" />
+    </svg>
+</div>
+</div> */
