--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+*{
 
+    padding: 0;
+    margin: 0;
+}
 body {
     background-color: white;
     font-family: 'Rubik', sans-serif;
-    padding: 0;
-    margin: 0;
 }
 
 nav {
@@ -383,19 +385,66 @@ footer {
 
 @media screen and (max-width: 375px) {
 
-    nav,
-    main {
-        width: 100%;
-    }
-
     nav {
         margin: 0;
         padding: 0;
         display: flex;
         align-items: center;
     }
+    nav img, nav svg{
+        margin: 0 !important;
+        padding: 0;
+    }
 
-    .list ul {
+    .mobile-nav{
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
+        top: 0;
+        z-index: 100;
+        background-color: hsla(227, 18%, 20%, 0.874);;
+    }
+
+    .mobile-nav button {
+        width: 305px;
+        margin: 24px auto;
+        border: 2px solid #ffffff;
+        background: transparent;
+    }
+    .mobile-logo{
+        display: flex;
+        justify-content: space-between;
+        margin: 35px 30px 25px 30px;
+    }
+
+
+    .mb-menu {
+        margin: 0 auto;
+        width: 80%;
+    }
+    .mb-menu li:first-child{
+        padding-top: 20px;
+        border-top: .5px solid #ffffff;
+    }
+    .mb-menu li {
+        margin: 25px auto;
+        color: white;
+        font-size: 18px;
+        letter-spacing: 4px;
+        text-align: center;
+        padding-bottom: 20px;
+        border-bottom: .5px solid #ffffff;
+    }
+    .mobile-social-icon{
+        display: flex;
+        gap: 50px;
+        justify-content: center;
+        margin-top: 180px;
+    }
+
+    .list  {
         display: none;
     }
 
@@ -564,47 +613,8 @@ footer {
         padding: 10px 0;
         text-align: center;
     }
-
-    .overlay {
-        width: 100%;
-        height: 100%;
-        opacity: 0;
-        visibility: hidden;
-        transition: opacity .35s, visibiliy .35s, height .35s;
-        overflow: hidden;
-        background: hsl(229, 31%, 21%);
-
-    }
-
-    .hamburger {
-        z-index: 100;
-        top: 1px;
-        right: 1px;
-        padding: 4px;
-        border: none;
-        background: white;
-        cursor: pointer;
-    }
-
+    
     
 }
 
-/* <div class="mobile-nav">
-<ul class="menu">
-    <li class="menuItem">FEATURES</li>
-    <li class="menuItem">PRICING</li>
-    <li class="menuItem">CONTACT</li>
-    <li class="menuItem"><button>LOGIN</button></li>
-</ul>
-
-<div class="footer-container">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24">
-        <path fill="#FFF" fill-rule="evenodd"
-            d="M22.675 0H1.325C.593 0 0 .593 0 1.325v21.351C0 23.407.593 24 1.325 24H12.82v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116c.73 0 1.323-.593 1.323-1.325V1.325C24 .593 23.407 0 22.675 0z" />
-    </svg>
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="20">
-        <path fill="#FFF" fill-rule="evenodd"
-            d="M24 2.557a9.83 9.83 0 0 1-2.828.775A4.932 4.932 0 0 0 23.337.608a9.864 9.864 0 0 1-3.127 1.195A4.916 4.916 0 0 0 16.616.248c-3.179 0-5.515 2.966-4.797 6.045A13.978 13.978 0 0 1 1.671 1.149a4.93 4.93 0 0 0 1.523 6.574 4.903 4.903 0 0 1-2.229-.616c-.054 2.281 1.581 4.415 3.949 4.89a4.935 4.935 0 0 1-2.224.084 4.928 4.928 0 0 0 4.6 3.419A9.9 9.9 0 0 1 0 17.54a13.94 13.94 0 0 0 7.548 2.212c9.142 0 14.307-7.721 13.995-14.646A10.025 10.025 0 0 0 24 2.557z" />
-    </svg>
-</div>
-</div> */
+/*  */
