--- a/style.css
+++ b/style.css
@@ -404,12 +404,12 @@ footer {
         height: 100vh;
         top: 0;
         z-index: 100;
-        background-color: hsla(227, 18%, 20%, 0.874);;
+        background-color: hsla(228, 63%, 17%, 0.936);;
     }
 
     .mobile-nav button {
         width: 305px;
-        margin: 24px auto;
+        margin: 20px auto;
         border: 2px solid #ffffff;
         background: transparent;
     }
@@ -426,7 +426,8 @@ footer {
     }
     .mb-menu li:first-child{
         padding-top: 20px;
-        border-top: .5px solid #ffffff;
+        border-top: .5px solid #ffffff33;
+
     }
     .mb-menu li {
         margin: 25px auto;
@@ -435,7 +436,7 @@ footer {
         letter-spacing: 4px;
         text-align: center;
         padding-bottom: 20px;
-        border-bottom: .5px solid #ffffff;
+        border-bottom: .5px solid #ffffff33;
     }
     .mobile-social-icon{
         display: flex;
