--- a/style.css
+++ b/style.css
@@ -24,6 +24,9 @@ nav li {
     font-weight: 300;
     color: hsl(229, 8%, 60%);
 }
+.hamburger{
+    visibility: hidden;
+}
 
 .list ul {
     display: flex;
@@ -202,6 +205,7 @@ p {
     width: fit-content;
     margin: 50px auto;
 }
+
 
 .shape {
     background: white;
@@ -395,8 +399,11 @@ footer {
         margin: 0 !important;
         padding: 0;
     }
-
+    .hamburger{
+        visibility: visible;
+    }
     .mobile-nav{
+        visibility: hidden !important;
         position: absolute;
         display: flex;
         flex-direction: column;
